# vault-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: basic_checks_and_build.yml
benches/: crypto_bench.rs
src/: bin.rs  lib.rs
src/core/: cache.rs  crypto.rs  error.rs  manager.rs  metadata.rs  mod.rs  storage.rs  vault.rs
