[package]
name = "vault-rs"
version = "0.0.1"
edition = "2024"

[lib]
name="vault_core"
path="src/lib.rs"

[[bin]]
name="vault"
path="src/bin.rs"

[dependencies]
clap={version="4.5.4", features=["derive"]}
rpassword= "7.4"
argon2="0.5"
aes-gcm="0.10"
rand="0.9"
serde={version="1.0", features=["derive"]}
serde_json="1.0"
uuid={version="1.8.0",features=["v4"]}
indexmap={version="2",features=["serde"]}
directories-next = "2.0.0"
zeroize="1.8.1"
once_cell="1.21"
thiserror="1.0"
base64 = "0.22.1"
rustyline= "16.0.0"
libc="0.2.0"
users = "0.11.0"

[dev-dependencies]
criterion="0.6"

[[bench]]
name= "crypto_bench"
harness=false
[profile.dev]
incremental=true
